Segundo guardado Víctor y Daniel

--- a/Página_webIES.html
+++ b/Página_webIES.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>IES Villaverde</title>
+    <title>IES Villaverde GIT</title>
     <link rel="stylesheet" href="PáginaPrincipal.css">
 </head>
 <body>
